Fix UNION/INTERSECT/EXCEPT set operations support
- Add missing INTERSECT token type to TokenType enum
- Fix Union node distinction logic: UNION (distinct=true) vs UNION ALL (distinct=false)
- Create FeatureDebugTest with UNION/UNION ALL parsing and generation tests
- All tests passing: 19 passing, 52 disabled tests

--- a/pom.xml
+++ b/pom.xml
@@ -72,15 +72,16 @@
                     <version>4.3</version>
                     <configuration>
                         <header>${project.parent.basedir}/LICENSE</header>
-                        <includes>
-                            <include>src/**/*.java</include>
-                        </includes>
-                        <excludes>
-                            <exclude>src/**/TestSimple.java</exclude>
-                        </excludes>
                         <mapping>
                             <java>SLASHSTAR_STYLE</java>
                         </mapping>
+                        <licenseSets>
+                            <licenseSet>
+                                <excludes>
+                                    <exclude>**/TestSimple.java</exclude>
+                                </excludes>
+                            </licenseSet>
+                        </licenseSets>
                     </configuration>
                     <executions>
                         <execution>
